--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,3 +30,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: trunk build --release
+      
+    - name: Upload
+      uses: actions/upload-artifact@v2
+      with:
+          name: Build
+          path: dist
