--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -36,3 +36,9 @@ jobs:
       with:
           name: Build
           path: dist
+          
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./dist
